testsuite/tests/lexical_envs/invalid_subunit_root/non_root_list.lkt
grammar foo_grammar {
    @main_rule main_rule <- ASTList[Subunit]+(Subunit("example" main_rule))
}
